--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -49,7 +49,8 @@ začátku každého článku pak bude tldr;, abyste nemuseli procházet celý č
 po probuzení uvědomoval, co musím udělat -- šlo spíš o cizí postel na cizí 
 koleji. Čtyřleté bydlení na Podolí bylo ukončeno, ale díky přátelům z FYKOSu 
 (tady bude link na článek o tom, co kdo jsem a co dělám) jsem mohl přespat 
-zdarma. Nádherný výhled na Prahu, který pokoj umožňoval, je na fotce 1.
+zdarma. Nádherný výhled na Prahu, který pokoj umožňoval, je na fotce 1 (o tom, 
+proč nefotím, napíšu již brzy zde; naštěstí mám lidi, co fotí za mě).
 
 <!-- fotka 1 zde -->
 
@@ -120,6 +121,57 @@ zhola nic, protože dominanty měst zkrátka nejsou tak dominantní, aby je šlo
 rozeznat z letadla. Teda, jdou vidět letiště a dálnice, ale to je asi všechno. 
 Nejznatelnější dominantou byla dráha, silnice, násep či co, prostě jakási 
 táhnoucí se čára v krajině, která byla o chvíli později na základě moře 
-pod námi identifikována jako pobřeží, podle směru letu asi Polské pobřeží. 
+pod námi identifikována jako pobřeží, podle směru letu asi Polské. 
 
+Na mapách a videích níže je příklad toho, co jsem přibližně viděl z letadla. 
+Video a fotka jsou odjinud, nicméně viděl jsem něco podobného. 
 
+https://mapy.cz/s/gumoharude
+https://cdn.britannica.com/62/149562-050-56D2D5C5/Helsinki-archipelago-Finland.jpg
+https://youtu.be/z1VaDzPRNsk
+https://youtu.be/lVaLN1soEKk
+https://youtu.be/LtzgGQOmPJc
+https://youtu.be/wwbpqHjcSnQ
+
+První dojmy byly, že ostrovy vypadají jako rozsypané kakao nebo peřinková 
+buchta. A taky že je tu hodně lesů. Aspoň mi to tak přišlo (kdyžtak pište do 
+komentářů, zda souhlasíte či ne). Pro srovnání Stansted 
+(https://youtu.be/PyL0Oy32pxU). Na druhou stranu, podle místních v okolí 
+Helsinek zas tak moc lesů není -- tak pro srovnání ještě Rovaniemi 
+(https://youtu.be/LptzXklqWJw). 
+
+Po příletu byl odchod z letadla po skupinách -- kvůli omezení kontaktů. 
+Kontrola potvrzení o očkování šla rychle, pak jsem chvíli spekuloval, zda 
+jít na vlak či autobus a nakonec jsem sednul na vlak. Mimochodem, mísní 
+aplikace na MHD (HSL) umí vyhledávat i z adresy na adresu a pokud si člověk 
+explicitně nezvolí "omezit chůzi", tak se asi projde -- v mojem případě to 
+bylo asi 1,5 km. Což by normálně byla úplně pohoda, ale ten .... kufr dělal 
+randál a bolela z něj ruka. 
+
+První dojmy z města -- je tu více stromů, parků (a občas i lesů). Většina 
+chodníků obsahuje i pruh pro cyklisty. A cyklistů tu je značně -- naopak 
+vozidla MHD jsou neobvykle prázdná (viz Finnish nightmares -- full bus).
+
+"Koleje" jsem našel a vše šlo podle plánu (více o bydlení bude v samostatném 
+článku). Vedoucího kolejí asi nikdy nikdo neviděl, ani neznáme, jak se 
+jmenuje. Koluje drb, že je velmi urostlý -- asi aby uměl vyhodit 
+nespolupracující nájemníky. Jiný drb praví, že je to nějaký systém 
+generující emaily. 
+
+Můj spolubydlící je z Polska a je hrozně fajn. Věkem asi jako naši rodiče, 
+ale koho to zajímá, stejně je neformální. "Bla bla bla... Naučit se finsky? 
+Na to se klidně vykašli. Snažil jsem se o to a šlo to pomalu. Pak jsem 
+ale zjistil, že to vlastně nepotřebuji. Pracuji tu šest let a pokaždé 
+jsem se anglicky domluvil." Pozn: anglicky tu umí skoro každý, včetně 
+důchodců -- ba dokonce i státní správa. 
+
+Rozdíly proti ČR rozeberu v samostatném článku (samozamykací dveře, drahý 
+alkohol, sauny, jeden klíč na vše, hodně kol nebo třídění odpadu). 
+
+Již během prvního dne jsme stihli s kamarádem z Bergama (jo, toho Bergama 
+ze zpráv) zrealizovat jednu aktivitu typickou pro Finsko -- ztratit se v lese. 
+Pomohly offline Mapy. 
+
+Ok, to je prozatím vše. Kdyžtak pište do komentářů (nebo na můj mail 
+matej.rzehulka(zavináč)seznam.cz), co by vás zajímalo. 
+Případná upozornění na jakékoli chyby jsou vítána. 
