--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -49,9 +49,11 @@ začátku každého článku pak bude tldr;, abyste nemuseli procházet celý č
 po probuzení uvědomoval, co musím udělat -- šlo spíš o cizí postel na cizí 
 koleji. Čtyřleté bydlení na Podolí bylo ukončeno, ale díky přátelům z FYKOSu 
 (tady bude link na článek o tom, co kdo jsem a co dělám) jsem mohl přespat 
-zdarma. Nádherný výhled na Prahu, který pokoj umožňoval, je na fotce 1 (o tom, 
+zdarma. Nádherný výhled na Prahu, který pokoj umožňoval, je v cloudu -- 
+odkaz níže (o tom, 
 proč nefotím, napíšu již brzy zde; naštěstí mám lidi, co fotí za mě).
 
+https://photos.app.goo.gl/wrAup8f1SetUgt4A7
 <!-- fotka 1 zde -->
 
 Hlavně nic nezapomenout. A také to zvládnout nacpat zpět. A ještě snížit 
@@ -127,10 +129,15 @@ Na mapách a videích níže je příklad toho, co jsem přibližně viděl z le
 Video a fotka jsou odjinud, nicméně viděl jsem něco podobného. 
 
 https://mapy.cz/s/gumoharude
+
 https://cdn.britannica.com/62/149562-050-56D2D5C5/Helsinki-archipelago-Finland.jpg
+
 https://youtu.be/z1VaDzPRNsk
+
 https://youtu.be/lVaLN1soEKk
+
 https://youtu.be/LtzgGQOmPJc
+
 https://youtu.be/wwbpqHjcSnQ
 
 První dojmy byly, že ostrovy vypadají jako rozsypané kakao nebo peřinková 
