--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -158,7 +158,9 @@ randál a bolela z něj ruka.
 
 První dojmy z města -- je tu více stromů, parků (a občas i lesů). Většina 
 chodníků obsahuje i pruh pro cyklisty. A cyklistů tu je značně -- naopak 
-vozidla MHD jsou neobvykle prázdná (viz Finnish nightmares -- full bus).
+vozidla MHD jsou neobvykle prázdná (viz Finnish nightmares -- full bus 
+https://www.facebook.com/finnishnightmares/photos/a.1434260190045922/1471626272975980/
+).
 
 "Koleje" jsem našel a vše šlo podle plánu (více o bydlení bude v samostatném 
 článku). Vedoucího kolejí asi nikdy nikdo neviděl, ani neznáme, jak se 
