fix typo, remove duplicities

--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -91,7 +91,7 @@ Po dvojitém googlení a pohovoru s paní v prodejně jdu s veselým úsměvem
 
 Uff, nikdo nekontroloval hmotnost zavazadla ani obsah. Pochopitelně litr 
 tvrdého nic není, ale tehdy jsem to úplně nevěděl (více bude zde). 
-Sedám si do skvělého místa u nouzového východu, které je ošeobecně oblíbené 
+Sedám si do skvělého místa u nouzového východu, které je všeobecně oblíbené 
 díky většímu prostoru na nohy (členství ve Finnair s volbou preferovaného 
 sedadla se zřejmě vyplatilo; více o povinnostech s tímto místem spojených 
 bude zde). Z okolí se ozývá cosi připomínajícího texty skupiny Korpiklaani 
