--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -117,17 +117,20 @@ Let byl nádherný. Finnair (podle všeho jediná přímá linka PRG-HEL a vlast
 jediná přímá z ČR nebo Katowic) má oproti Ryanu (který jsem znal předtím) 
 zdarma vodu a možná ještě něco dalšího; také jejich borůvkový džus (nebo 
 co to je -- píšu brzy, tohle jsem ještě nenastudoval, každopádně zde bude 
-link na finské jídlo a pití). Pod námi šly vidět různé druhy mraků (link na 
-wiki) a z různých tvarů měst a krajiny pod námi jsem o naši pozici nezjistil 
+link na finské jídlo a pití). Pod námi šly vidět různé druhy mraků (přehled 
+např. na wiki https://cs.wikipedia.org/wiki/Oblak#Současné\_třídění) a z 
+různých tvarů měst a krajiny pod námi jsem o naši pozici nezjistil 
 zhola nic, protože dominanty měst zkrátka nejsou tak dominantní, aby je šlo 
-rozeznat z letadla. Teda, jdou vidět letiště a dálnice, ale to je asi všechno. 
+rozeznat z letadla (resp. vinou je pravděpodobně moje nedostatečná znalost 
+zeměpisu). Teda, jdou vidět letiště a dálnice, ale to je asi všechno. 
 Nejznatelnější dominantou byla dráha, silnice, násep či co, prostě jakási 
 táhnoucí se čára v krajině, která byla o chvíli později na základě moře 
 pod námi identifikována jako pobřeží, podle směru letu asi Polské. 
 
-Na mapách a videích níže je příklad toho, co jsem přibližně viděl z letadla. 
+Na mapách a videích níže je příklad toho, co jsem přibližně viděl z letadla 
+během příletu do Finska. 
 Video a fotka jsou odjinud, nicméně viděl jsem něco podobného. Opět žádná 
-mapa, fotka ani video není moje díloí moje dílo.
+mapa, fotka ani video není moje dílo.
 
 https://mapy.cz/s/gumoharude
 
