accomodation, todo, money

--- a/diary/20210909.md
+++ b/diary/20210909.md
@@ -2,4 +2,5 @@
 - morning crocquet and petangue
 - ultimate frisbee -- my terrible underestimation of opponents
 - ESN meeting
-- sauna on a trailer, for 10 people -- inside 23 people, mixed sex, mixed finns/foreigners, drinking beer, singin finnish songs, bit drunk
+- sauna on a trailer, for 10 people -- inside 23 people, mixed sex, mixed finns/foreigners, drinking beer, singin finnish songs, bit drunk -- most finnish thing I've seen so far (tuubisauna.fi)
+- rodina Turků se přestěhovala do Turku
