--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -125,10 +125,11 @@ rozeznat z letadla (resp. vinou je pravděpodobně moje nedostatečná znalost
 zeměpisu). Teda, jdou vidět letiště a dálnice, ale to je asi všechno. 
 Nejznatelnější dominantou byla dráha, silnice, násep či co, prostě jakási 
 táhnoucí se čára v krajině, která byla o chvíli později na základě moře 
-pod námi identifikována jako pobřeží, podle směru letu asi Polské. 
+pod námi identifikována jako pobřeží, podle směru letu asi polské. 
 
 Na mapách a videích níže je příklad toho, co jsem přibližně viděl z letadla 
-během příletu do Finska. 
+během příletu do Finska. Podobných videí je spousta, stačí zadat "Landing 
+Helsinki" na Youtube. 
 Video a fotka jsou odjinud, nicméně viděl jsem něco podobného. Opět žádná 
 mapa, fotka ani video není moje dílo.
 
@@ -153,9 +154,9 @@ Helsinek zas tak moc lesů není -- tak pro srovnání ještě Rovaniemi
 
 Po příletu byl odchod z letadla po skupinách -- kvůli omezení kontaktů. 
 Kontrola potvrzení o očkování šla rychle, pak jsem chvíli spekuloval, zda 
-jít na vlak či autobus a nakonec jsem sednul na vlak. Mimochodem, mísní 
+jít na vlak či autobus a nakonec jsem sednul na vlak. Mimochodem, místní 
 aplikace na MHD (HSL) umí vyhledávat i z adresy na adresu a pokud si člověk 
-explicitně nezvolí "omezit chůzi", tak se asi projde -- v mojem případě to 
+explicitně nezvolí "omezit chůzi", tak se asi projde -- v mém případě to 
 bylo asi 1,5 km. Což by normálně byla úplně pohoda, ale ten .... kufr dělal 
 randál a bolela z něj ruka. 
 
