--- a/diary/20210902/20210902_kridlo.md
+++ b/diary/20210902/20210902_kridlo.md
@@ -186,6 +186,14 @@ Již během prvního dne jsme stihli s kamarádem z Bergama (jo, toho Bergama
 ze zpráv) zrealizovat jednu aktivitu typickou pro Finsko -- ztratit se v lese. 
 Pomohly offline Mapy. 
 
-Ok, to je prozatím vše. Kdyžtak pište do komentářů (nebo na můj mail 
-matej.rzehulka(zavináč)seznam.cz), co by vás zajímalo. 
+Ok, to je prozatím vše. Pro prevenci zahlcení mailu zde svůj osobní 
+mail dávat nebudu. Jakékoli reakce, upozornění na chyby či otázky jsou 
+vítány, kontakt na mě si určitě zvládnete najít (můžete reagovat přímo zde 
+přes GitHub nebo v článku je spousta indicií, podle kterých byste neměli 
+mít problém mě najít. 
+<!--Kdo bude chtít nějak reagovat nebo se na cokoli zeptat
+Kdyžtak pište přes GitHub, najděte si mě na jiných  
+do komentářů (nebo na můj mail 
+, co by vás zajímalo. 
 Případná upozornění na jakékoli chyby jsou vítána. 
+-->
