--- a/diary/20210919.md
+++ b/diary/20210919.md
@@ -73,3 +73,14 @@ Do you hug your female friends?
 Not really
 
 I moved to dormitory because of commuting distance of ... 10 km! From Espoo to Helsinki.
+
+Na písmekách záleží
+Kiipis x Kiitos
+Viini x Viina (režná 32 %)
+Helvetti x Helveeti (peklo x Švýcarsko)
+
+
+
+Everything from rye (Ruis)
+
+Finland is very easy for vegan
