--- a/diary/20210921.md
+++ b/diary/20210921.md
@@ -6,3 +6,4 @@
 - ve Finsku se nekrade, ale tohle je proste blba oblast
 - je tu studentska a komercni cena... ty mas tu komercni
 - opet jsem za hvezdu... jen diky tomu, ze chci vyuzivat potencial, ktery tu mame
+- budu nákupčí... Jak je .... možné, že tu zase chybí zcela zásadní vybavení domácnosti, jako lepící páska, WD-40, šroubovák, sada klíčů a imusů, kombinačky,... 
