--- a/diary/20210924.md
+++ b/diary/20210924.md
@@ -36,4 +36,5 @@
 - blbá taška, naposled toto
 - nejvíc finská témata -- Army, Good old days, Sauna
 - I liked army (leitnant) For some reason, non of my minions didn't like me. At least you united them. 
- 
+- byla tma a před náma se ozvalo zašustění, ťuknutí a něžný, ženský hlásek vypískujíce "sátana" (saatana) - slečně cosi vypadlo z batohu a rozsypalo se na zem
+-  
