--- a/diary/20210925.md
+++ b/diary/20210925.md
@@ -1,2 +1,35 @@
-- proč jsem kurva zaspal, vždyť jsem nic nepil... no, právě
-- 
+- proč jsem kurva zaspal, vždyť jsem nic nepil... no, právě, večer před spaním jsi nepil vodu a teď ti není dobře, bo jsi dehydratovaný jak kaktus v poušti
+- konečně šampon na vousy
+- taneční teď kvůli restrikcím skoro nefungují (jen hodně omezeně)
+- i před hostinou by ses měl trochu najíst, abys nebyl zcela hladový, bo jídlo bude kdoví kdy
+- výběr z bankomatu úplně bez problému
+- Hodně daleko bydlím
+- sitsit
+    - všichni: Tyjo, ty máš oblek?
+    - fest tradic
+        - heei moi
+        - fest příběhů a zpívání
+        - čepice
+        - vlastní alkohol
+        - fest sklenek
+        - rande s 2 čechy a 1 číňanem
+        - umíš tak skvěle finsky, kde ses to naučil? Já jsem Fin.
+    - tanec s náhodnou Finkou
+        - musím začít chodit do tanečních, zase jsme furt tančili totéž
+    - pěvecké skupiny (typicky kvartety)
+    - škoda, že nerozumím
+    - jídlo se jí studené a má 3 chody
+    - order of malt
+    - destilované pivo míchané s vodkou
+    - valkoviini
+    - divné červené, dobrý sekt
+    - lezení na střechu
+    - picí hra na Turku
+    - kiipis, Skal [skól]
+    - binární písnička
+    - Mohu si říct o více pití? Spíš ne, ale bude ti dolito (a bylo -- vodka, červené, bílé, pivní pálenka, Cordial, káva, voda) a bude tam bar (pivo). 
+    - Když někdo mluví, tak nepiješ. Ale můžeš zahlásit, že piješ, a všichni pijou
+    - Řekni si o písničku
+    - Hodně zpívání a divné zvyky (lezení na židli, mlácení do stolu, přípitek místo refrénu, kývání se, )
+- co je pro číňana jiné v Evropě? Všechno!
+- neměl bys definovat, jinak ty lidi nepotkáš
