--- a/diary/20211026.md
+++ b/diary/20211026.md
@@ -2,4 +2,10 @@
 - texání, texání, texání
 - běh v zimě, v kraťasech a triku proti lidem v bundách, čepicích ba i v rukavicích
 - opravář kol
+- číňani
+  - moc se nerozmýšlejí, prostě konají
+    - nízkou efektivitu práce (kvůli menšímu rozmýšlení předtím) kompenzují pracovním nadšením
+    - kolo díky tomu opravil cca 4x rychleji, než já, ale neumím si moc dobře představit, že by takto opravoval něco sofistikovanějšího (např. hodinky)
+  - naprosto přesně seděl k ideálu vojáka, představeného ve Švejkovi -- "Voják nemá myslet. Za něj myslí jeho nadřízení!"
+
 
