word of the day

--- a/diary/20210902_kridlo.md
+++ b/diary/20210902_kridlo.md
@@ -197,3 +197,4 @@ do komentářů (nebo na můj mail
 , co by vás zajímalo. 
 Případná upozornění na jakékoli chyby jsou vítána. 
 -->
+Finnish word: tie (wegen), katu (gatan)
