--- a/diary/20210904.md
+++ b/diary/20210904.md
@@ -11,3 +11,5 @@
 - Have you just ordered meal in Finnish? :o
 - Hey, I know Praha (not Prague)
 - bullshit of writing terminal stations of metro train
+
+Finnish word: Pekkoni, tšekki, tšekkilainen, tšekkin kieli
