--- a/diary/20210907.md
+++ b/diary/20210907.md
@@ -20,4 +20,4 @@
     - request stops only
 - Jokkeri light rail -- would save my time... in 2 years
 - different language, czech teaching
-- finnish curse words (perkele saatana, voi vittu)
+Finnish word: finnish curse words (perkele, saatana, vittu)
