--- a/diary/20210908.md
+++ b/diary/20210908.md
@@ -1,3 +1,5 @@
 - intercultural issues
 - intercultural teams seems more productive
 - no email reply, only deeds
+
+Finnish word: Muustikka, Muustikkakeitto
