--- a/diary/20210909.md
+++ b/diary/20210909.md
@@ -4,3 +4,5 @@
 - ESN meeting
 - sauna on a trailer, for 10 people -- inside 23 people, mixed sex, mixed finns/foreigners, drinking beer, singin finnish songs, bit drunk -- most finnish thing I've seen so far (tuubisauna.fi)
 - rodina Turků se přestěhovala do Turku
+
+Finnish word: sauna words: Kuuma, sauna, kylmä, sulje, ovi, lissa löylu
