--- a/diary/20210912.md
+++ b/diary/20210912.md
@@ -42,3 +42,6 @@
 - you're crazy for being in the hottest place of sauna and than staying in the cold sea
 - spoken navigation for the win
 - co není v hlavě, musí být v nohách -- aneb cestování na kole ve 3 ráno, protože MHD od 1:30 do 4:30 nejezdí
+
+Finnish words
+- juusto, pulla, leipä, ruis, ruisleipä
