--- a/diary/20210913.md
+++ b/diary/20210913.md
@@ -2,3 +2,4 @@
 - každý předmět má "Moodle" -- super
 - nějak málo hodin ve škole -- větší důraz na individuální práci
 
+Finnish word: järvi, lahti, niemi
