--- a/diary/20211105.md
+++ b/diary/20211105.md
@@ -1,11 +1,13 @@
 - nejlepší učitel CFD
   - všechno vysvětlí, čte mi myšlenky
   - nečetl a přesto rozumí článkům lépe
+- VTT celebrity, HTTR
+- zatím teprv 2. papír, co jsem opravdu musel vytisknout a podepsat
 - metalová mše svatá
   - cesta do Pitäjänmaki
     - není nad to, když na neznámé cestě vypadne GPS
     - nikdy nejsem přesně, ale vždy přesně odhadnu, jak moc se zpozdím
-  - Metallimessu by ... 
+  - Metallimessu by Kekkelainen 
     - a zpívejte všichni z plných plic, stejně tu bude takový kravál, že vás neuslyší ani člověk vedle
     - metalové písničky z 18. stol
     - hard words needs hard music
@@ -14,4 +16,6 @@
   - vážně s tím vypadám ze zadu jako slečna??? :o
 - 1 pivo po mši aneb zdržím se do půl druhé
 - co přivézt domů? Přece Muustikkakeitto!!!
+
  
+Finnish word: Metallimessu
