--- a/diary/20211106.md
+++ b/diary/20211106.md
@@ -1,3 +1,4 @@
+- malý raní plogging
 - pokrokove Helsinki
   - bezmase úterý
   - angličtina coby 3. úřední jazyk
@@ -9,3 +10,4 @@
   - kakao z prášku, kafe není???
   - Švédi na návštěvě u Indů v Helsinkách
   - kilt je konečně pohodlný
+Finnish word: Saari (ostrov)
