--- a/diary/20210914.md
+++ b/diary/20210914.md
@@ -14,3 +14,5 @@
   A: ... (throwing the dildo) ...
   B: (after inspection of the dildo) It's missing balls, isn't it? Where has it lost them?
   C: Yes, that's a long story.
+
+Finnish word: Koskenkorva, viina, jalluviina, Gambina, Valdemar, pantti
