--- a/diary/20210915.md
+++ b/diary/20210915.md
@@ -17,3 +17,5 @@ venku.
 Pivo jsem si s sebou nevzal. Teda, ne že by nebývalo zvykem jej v sauně pít, 
 ba naopak, nýbrž proto, že jsem se bál, že by mi zevřelo. V téhle bylo 
 větší vedro, než obvykle, pořád někdo přikládal a házel loulo.   
+
+Finnish word: posti, sähköä, sähköposti
