--- a/diary/20210916.md
+++ b/diary/20210916.md
@@ -5,3 +5,6 @@
 Jednou jsem mu tam malem nasilim vrazil do zavirajicich dveří. Ja zrychlit muzu, ale tvoje dvere ne. Ukizdeni nebude tolerovano. Ja umim dobihat.
 - rezervace mistnosti
 - programator??? mezi fyziky
+
+Finnish word: verkko, kauppa, verkokauppa, kierrätys, kierrätyskeskus
+
