--- a/diary/20210917.md
+++ b/diary/20210917.md
@@ -1,3 +1,6 @@
 - pivo pod 4 EUR / litr --> fajne
     - wtf, představte si, že byste si kupovali 1,5 l Braníku za 150 Kč ... Hrůza, co?
     - asi ze mě bude abstinent
+
+
+Finnish word: kesto, pussi, kestopussi
