--- a/diary/20210918.md
+++ b/diary/20210918.md
@@ -5,3 +5,4 @@
 - co to kurva je, který čurák vymyslel, že se budou popelnice zamykat??? 
     - člověk chce někomu uklidit zahradu a s bordelem musí 300 m vedle, wtf???
 
+Finnish word: fuksi, teekari, kylä, teekarikylä, tohtori, fuksitohtori, laakari
