--- a/diary/20210919.md
+++ b/diary/20210919.md
@@ -84,3 +84,5 @@ Helvetti x Helveeti (peklo x Švýcarsko)
 Everything from rye (Ruis)
 
 Finland is very easy for vegan
+
+Finnish word: Kala, satama, Kalasatama, terminaali, metro, asema, metroasema
