--- a/diary/20210920.md
+++ b/diary/20210920.md
@@ -8,3 +8,4 @@
 - bus bez hledání
 - aktivní člen kolejí
 
+Finnish word: Omena, peruna, tomaatti, kurkki, sipuli, valkosipuli, tonnikala, apfelsini, veri, greippi, verigreippi
