--- a/diary/20211029.md
+++ b/diary/20211029.md
@@ -6,4 +6,6 @@
   - Banik p\*\*\* do zpěvníku
   - cimrman do zpěvníku
   - Valkoviini ... Muhahahaha, už si umím objednat
+  - výrobce psích obojků asi předpokládal, že to budou nosit jenom psi
 
+Finnish word: koira, kissa, nahka, panta, nahkapanta
