--- a/diary/20211119.md
+++ b/diary/20211119.md
@@ -19,3 +19,5 @@ British: "Unfortunately yes."
 
 https://youtu.be/mpMp0Dnd8BE
 1:23 mě totálně rozbilo, od 1:40 asi trochu přisprostlé
+
+WoD: Karhu (medvěd ale také značka piva), korvapuusti (skořicové pečivo, asi něco jako čeští šneci)
