--- a/diary/20211125.md
+++ b/diary/20211125.md
@@ -20,3 +20,4 @@
     - prakticky už nepoužívám mapy
     - dneska jsem říkal svojim finským spolužákům, kudy vede cesta a jak se jmenuje která sauna
 - kolik máš nášivek? Asi 250
+- jsem zhruba na stejné úrovni s místními... prváky. Je to smutné, ale místním z vyšších ročníků nesahám ani po kotníky.
