--- a/diary/20211205.md
+++ b/diary/20211205.md
@@ -6,4 +6,7 @@
     - kiitos -> kiiti
     - sinä -> sä
 - neumím anglicky -- aneb nikdo mě nenaučil, jak se anglicky řekne evangelium (gospel), otčenáš,...
+- po sauně do sněhu
+- ital co žije v Estonsku a učí finštinu
+- někteří místní jsou... pěkné svině... jakmile kvůli někoho ztratí důvěru v lidi v dané věci, tak je možné, že odmítnou komukoli pomoct... mně nabídli tisk 1 A4 za 2 eur a kamarádovi zase odmítli půjčit vysavač
 
