--- a/diary/20211206.md
+++ b/diary/20211206.md
@@ -10,4 +10,5 @@
   - hymna a ta píseň, kterou má celý národ rád
 - totálně jsem se znemožnil před místními... aneb když vás někdo potká v supermarketu a dá vám otázku na osamostatnění Finska
   - 1917 -- nezávislost na Rusku
-
+  - jinými slovy pokud jedeš někam do ciziny, tak se musíš naučit alespoň základy místního jazyka a historie... Pokud budeš debil jako já a neuděláš to, tak se připrav na to, že budeš dělat HANBU, pravidelně se znemožňovat před místními, dokud si nevybuduješ pověst absolutního negramota...
+ 
