--- a/diary/20220307.md
+++ b/diary/20220307.md
@@ -2,5 +2,14 @@
 - ugrofinské jazyky jsou neskutečně zpěvné... není divu, že Finsko má nejvíce metalových kapel na obyvatele na světě -- nedivil bych se, kdyby mělo i nejvíce kapel a hudebníků obecně 
     - podobně Estonsko -- laulupidu, největší festival zpěvu na světě, je známý tím, že společně zpívá až 30 000 členů sboru a několik desítek tisíc lidí v publiku
     - zkuste si finsky napočítat do 10 ... máte pocit, že zpíváte
-
-
+- ale abych nezapomněl na to nejlepší -- zazpívali jsme celý zpěvník, opravdu CELÝ -- tedy včetně
+    - 2 textů o sponzorech,
+    - obsahu a rejstříku,
+    - tiráže, včetně adresy, telefonu a url.
+- texty písní byly také úplně ze všeho, mimo jiné taky
+    - číslo v binární soustavě,
+    - adresa, telefon a url,
+    - 1 slovo ("Nyt" = "teď") -- poté samozřejmě následuje štamprle nebo něco,
+    - kánon ze značek piva,
+    - píseň s přípitkem uprostřed,
+    - Gram-Schmidtův ortogonalizační proces
